--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
+    <nav id="nav-bar">This is the nav
+
+        <header>Description of Javascript</header>
+        <a href="#introduction" class="nav_link">Introduction</a>
+        <a href="#what_you_should_already_know" class="nav_link"> what you should already know</a>
+        <a href="#JavaScript_and_Java" class="nav_link">Javascript and java</a>
+        <a href="#Hello_World" class="nav_link">Hello world</a>
+        <a href="#Variables" class="nav_link">Variables</a>
+        <a href="#Declaring_Variables" class="nav_link">Declaring variables</a>
+                <a href="#Variable_scope" class="nav_link">Variable scope</a>
+    </nav>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
